created new js in new branch

--- a/sample.html
+++ b/sample.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>git</h1>
-    <p> git is a version control system</p>
+    <h1  id="head">git</h1>
+    <p id="para"> git is a version control system</p>
+    <script src="page.js"></script>
 </body>
 </html>
